# waveframes

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
src/: DataInterface.h  DataObject.cpp  DataObject.h  Generator.cpp  Generator.h  Utils.h  Waveforms.cpp  Waveforms.h
ui/: main.qml
ui/Components/: LegendDelegate.qml  Menu.qml
ui/Views/: ChartView.qml
ui/Widgets/: Legend.qml
